--- a/point_vortex_system.ipynb
+++ b/point_vortex_system.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cloning into 'Two_point_vortices'...\n"
+      "fatal: destination path 'Two_point_vortices' already exists and is not an empty directory.\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,18 +60,20 @@
     "    8. x_l, x_r: camera on x coordination. <br>\n",
     "    9. y_b, y_t: camera on y coordination. <br>\n",
     "* Tips: <br>\n",
-    "    1. the system take times to response to the new setting of parameters. This reponse time can be reduced by setting a small epoch number. <br>"
+    "    1. the system take times to response to the new setting of parameters. This reponse time can be reduced by setting a small epoch number. <br>\n",
+    "    2. the values can be entered next to the bar <br>\n",
+    "    3. parameters can be configed by using left/right arrow key. <br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1806167e19c8439892fa1031265ea097",
+       "model_id": "82e4789fcc754659a2df01c428f9e580",
        "version_major": 2,
        "version_minor": 0
       },
